feat: update talconfig

--- a/talos/utility/talconfig.yaml
+++ b/talos/utility/talconfig.yaml
@@ -6,7 +6,7 @@ talosVersion: v1.10.0
 kubernetesVersion: v1.33.0
 
 clusterName: &cluster utility
-endpoint: https://10.69.1.120:6443
+endpoint: https://k8s.utility.internal:6443
 
 clusterPodNets:
   - "10.42.0.0/16"
