feat: update psql config

--- a/kubernetes/components/postgres/cluster.yaml
+++ b/kubernetes/components/postgres/cluster.yaml
@@ -28,9 +28,9 @@ spec:
       metadata:
         labels:
           app.kubernetes.io/name: ${APP}-crunchy-postgres
-      replicas: &replicas 2
+      replicas: &replicas 3 # One per node
       dataVolumeClaimSpec:
-        storageClassName: ceph-block
+        storageClassName: local-hostpath
         accessModes: ["ReadWriteOnce"]
         resources:
           requests:
