--- a/talos/main/talconfig.yaml
+++ b/talos/main/talconfig.yaml
@@ -32,18 +32,24 @@ nodes:
     controlPlane: true
     networkInterfaces:
       - # 2.5G
-        deviceSelector:
-          hardwareAddr: 58:47:ca:7d:3c:88
+        interface: bond0
+        bond:
+          mode: 802.3ad
+          deviceSelectors: [{ hardwareAddr: "58:47:ca:7d:*", driver: igc }]
+          xmitHashPolicy: layer3+4
+          lacpRate: fast
+          miimon: 1000
         dhcp: true
+        mtu: 9000
+      - # 10G
+        deviceSelector:
+          hardwareAddr: 58:47:ca:7d:3c:85
+        dhcp: false
+        addresses:
+          - "10.69.1.21/24"
         mtu: 9000
         vip:
           ip: "10.69.1.20"
-      # - 10G
-      #   deviceSelector: [{ hardwareAddr: "58:47:ca:7d:*", driver: i40e }]
-      #   dhcp: true
-      #   mtu: 9000
-      #  vip:
-      #    ip: "10.69.1.20"
       - # eula
         deviceSelector: { busPath: 0-1.0 }
         dhcp: false
@@ -64,18 +70,24 @@ nodes:
     controlPlane: true
     networkInterfaces:
       - # 2.5G
-        deviceSelector:
-          hardwareAddr: 58:47:ca:7d:3d:b0
+        interface: bond0
+        bond:
+          mode: 802.3ad
+          deviceSelectors: [{ hardwareAddr: "58:47:ca:7d:*", driver: igc }]
+          xmitHashPolicy: layer3+4
+          lacpRate: fast
+          miimon: 1000
         dhcp: true
+        mtu: 9000
+      - # 10G
+        deviceSelector:
+          hardwareAddr: 58:47:ca:7d:3d:ad
+        dhcp: false
+        addresses:
+          - "10.69.1.22/24"
         mtu: 9000
         vip:
           ip: "10.69.1.20"
-      # - 10G
-      #   deviceSelector: [{ hardwareAddr: "58:47:ca:7d:*", driver: i40e }]
-      #   dhcp: true
-      #   mtu: 9000
-      #  vip:
-      #    ip: "10.69.1.20"
       - # ayaka
         deviceSelector: { busPath: 0-1.0 }
         dhcp: false
@@ -96,18 +108,24 @@ nodes:
     controlPlane: true
     networkInterfaces:
       - # 2.5G
-        deviceSelector:
-          hardwareAddr: 58:47:ca:7d:41:48
+        interface: bond0
+        bond:
+          mode: 802.3ad
+          deviceSelectors: [{ hardwareAddr: "58:47:ca:7d:*", driver: igc }]
+          xmitHashPolicy: layer3+4
+          lacpRate: fast
+          miimon: 1000
         dhcp: true
+        mtu: 9000
+      - # 10G
+        deviceSelector:
+          hardwareAddr: 58:47:ca:7d:41:45
+        dhcp: false
+        addresses:
+          - "10.69.1.23/24"
         mtu: 9000
         vip:
           ip: "10.69.1.20"
-      # - 10G
-      #   deviceSelector: [{ hardwareAddr: "58:47:ca:7d:*", driver: i40e }]
-      #   dhcp: true
-      #   mtu: 9000
-      #  vip:
-      #    ip: "10.69.1.20"
       - # ayaka
         deviceSelector: { busPath: 0-1.0 }
         dhcp: false
