feat: add new silence

--- a/talos/main/talconfig.yaml
+++ b/talos/main/talconfig.yaml
@@ -44,9 +44,7 @@ nodes:
       - # 10G
         deviceSelector:
           hardwareAddr: 58:47:ca:7d:3c:85
-        dhcp: false
-        addresses:
-          - "10.69.1.21/24"
+        dhcp: true
         mtu: 9000
         vip:
           ip: "10.69.1.20"
@@ -82,9 +80,7 @@ nodes:
       - # 10G
         deviceSelector:
           hardwareAddr: 58:47:ca:7d:3d:ad
-        dhcp: false
-        addresses:
-          - "10.69.1.22/24"
+        dhcp: true
         mtu: 9000
         vip:
           ip: "10.69.1.20"
@@ -120,9 +116,7 @@ nodes:
       - # 10G
         deviceSelector:
           hardwareAddr: 58:47:ca:7d:41:45
-        dhcp: false
-        addresses:
-          - "10.69.1.23/24"
+        dhcp: true
         mtu: 9000
         vip:
           ip: "10.69.1.20"
