--- a/talos/main/patches/global/machine-install.yaml
+++ b/talos/main/patches/global/machine-install.yaml
@@ -1,9 +1,12 @@
 machine:
   install:
     extraKernelArgs:
+      - -init_on_alloc          # Less security, faster puter
+      - -selinux                # Less security, faster puter
       - apparmor=0              # Less security, faster puter
       - init_on_alloc=0         # Less security, faster puter
       - init_on_free=0          # Less security, faster puter
+      - intel_idle.max_cstate=0 # Better performance
       - intel_iommu=on          # PCI Passthrough
       - iommu=pt                # PCI Passthrough
       - mitigations=off         # Less security, faster puter
