feat: change silence

--- a/kubernetes/apps/base/observability/silence-operator/app/helmrelease.yaml
+++ b/kubernetes/apps/base/observability/silence-operator/app/helmrelease.yaml
@@ -69,7 +69,7 @@ spec:
               value: CephNodeDiskspaceWarning
               isRegex: false
             - name: device
-              value: /dev/sd.*
+              value: /dev/nvme.*
               isRegex: true
       - apiVersion: monitoring.giantswarm.io/v1alpha1
         kind: Silence
