feat: upate talos image.. again

--- a/talos/main/talconfig.yaml
+++ b/talos/main/talconfig.yaml
@@ -149,6 +149,7 @@ controlPlane:
   nodeLabels:
     intel.feature.node.kubernetes.io/gpu: "true"
     topology.kubernetes.io/region: k8s
+    topology.kubernetes.io/zone: controlPlane
   patches:
     - "@./patches/controller/admission-controller-patch.yaml"
     - "@./patches/controller/cluster.yaml"
