feat(taskfile): add cluster

--- a/.taskfiles/kubernetes/Taskfile.yaml
+++ b/.taskfiles/kubernetes/Taskfile.yaml
@@ -65,7 +65,7 @@ tasks:
       - for:
           matrix:
             PHASE: [Failed, Pending, Succeeded]
-        cmd: kubectl delete pods --field-selector status.phase={{.ITEM.PHASE}} -A --ignore-not-found=true
+        cmd: kubectl --context {{.CLUSTER}} delete pods --field-selector status.phase={{.ITEM.PHASE}} -A --ignore-not-found=true
     requires:
       vars: [CLUSTER]
 
