tweak bond config

--- a/talos/main/talconfig.yaml
+++ b/talos/main/talconfig.yaml
@@ -38,7 +38,9 @@ nodes:
           deviceSelectors: [{ hardwareAddr: "58:47:ca:7d:*", driver: igc }]
           xmitHashPolicy: layer3+4
           lacpRate: fast
-          miimon: 1000
+          miimon: 100
+          updelay: 200
+          downdelay: 200
         dhcp: true
         mtu: 9000
       # - # 2.5G
@@ -79,7 +81,9 @@ nodes:
           deviceSelectors: [{ hardwareAddr: "58:47:ca:7d:*", driver: igc }]
           xmitHashPolicy: layer3+4
           lacpRate: fast
-          miimon: 1000
+          miimon: 100
+          updelay: 200
+          downdelay: 200
         dhcp: true
         mtu: 9000
       # - # 2.5G
@@ -120,7 +124,9 @@ nodes:
           deviceSelectors: [{ hardwareAddr: "58:47:ca:7d:*", driver: igc }]
           xmitHashPolicy: layer3+4
           lacpRate: fast
-          miimon: 1000
+          miimon: 100
+          updelay: 200
+          downdelay: 200
         dhcp: true
         mtu: 9000
       # - # 2.5G
