--- a/kubernetes/apps/base/observability/grafana/helmrelease.yaml
+++ b/kubernetes/apps/base/observability/grafana/helmrelease.yaml
@@ -275,7 +275,7 @@ spec:
           gnetId: 13665
           revision: 4
           datasource:
-            - { name: datasource, value: Prometheus }
+            - { name: DS_PROMETHEUS, value: Prometheus }
         unifi-network-sites:
           # renovate: depName="UniFi-Poller: Network Sites - Prometheus"
           gnetId: 11311
