--- a/.taskfiles/kubernetes/Taskfile.yaml
+++ b/.taskfiles/kubernetes/Taskfile.yaml
@@ -118,9 +118,9 @@ tasks:
     cmds:
       - mkdir -p ~/.kube ~/.talos
       - kubectl config view --flatten > ~/.kube/config
-      - cp {{.ROOT_DIR}}/talos/test/clusterconfig/talosconfig ~/.talos/config
-      - talosctl config merge {{.ROOT_DIR}}/talos/utility/clusterconfig/talosconfig --talosconfig ~/.talos/config
-      - talosctl config merge {{.ROOT_DIR}}/talos/main/clusterconfig/talosconfig --talosconfig ~/.talos/config
+      - cp {{.ROOT_DIR}}/talos/utility/talosconfig ~/.talos/config
+      # - talosctl config merge {{.ROOT_DIR}}/talos/test/talosconfig --talosconfig ~/.talos/config
+      - talosctl config merge {{.ROOT_DIR}}/talos/main/talosconfig --talosconfig ~/.talos/config
 
   privileged:
     desc: Run a privileged pod
