--- a/kubernetes/apps/main/kube-system/cilium/config/networks.yaml
+++ b/kubernetes/apps/main/kube-system/cilium/config/networks.yaml
@@ -75,7 +75,7 @@ kind: Service
 metadata:
   name: kube-api
   annotations:
-    io.cilium/lb-ipam-ips: 10.69.1.20
+    io.cilium/lb-ipam-ips: 10.69.1.20, ::ffff:10.69.1.20
 spec:
   type: LoadBalancer
   externalTrafficPolicy: Cluster
