--- a/.taskfiles/talos/Taskfile.yaml
+++ b/.taskfiles/talos/Taskfile.yaml
@@ -2,80 +2,134 @@
 # yaml-language-server: $schema=https://taskfile.dev/schema.json
 version: "3"
 
-tasks:
-  genconfig:
-    desc: Generate the Talos configs
-    dir: '{{.TALOS_DIR}}'
-    cmd: talhelper genconfig  --config-file talconfig.yaml --secret-file talsecret.sops.yaml --out-dir clusterconfig
-    requires:
-      vars: [CLUSTER]
-    preconditions:
-      - test -f {{.TALOS_DIR}}/talconfig.yaml
-      - test -f {{.TALOS_DIR}}/talsecret.sops.yaml
+vars:
+  SYSTEM_UPGRADE_VERSIONS: '{{.KUBERNETES_DIR}}/apps/base/kube-tools/system-upgrade-controller/versions.env'
 
+env:
+  KUBERNETES_VERSION:
+    sh: yq eval --input-format=props -oy '.KUBERNETES_VERSION' {{.SYSTEM_UPGRADE_VERSIONS}}
+  TALOS_VERSION:
+    sh: yq eval --input-format=props -oy '.TALOS_VERSION' {{.SYSTEM_UPGRADE_VERSIONS}}
+
+tasks:
   apply-node:
     desc: Apply Talos config to a node [CLUSTER=main] [HOSTNAME=required] [MODE=auto]
-    dir: '{{.TALOS_DIR}}'
-    cmds:
-      # - task: down
-      - talosctl apply-config --nodes {{.HOSTNAME}} --mode={{.MODE}} --file clusterconfig/{{.CLUSTER}}-{{.HOSTNAME}}.yaml --talosconfig clusterconfig/talosconfig
-      - talosctl --nodes {{.HOSTNAME}} health --talosconfig clusterconfig/talosconfig
-      # - task: up
+    cmd: |-
+      minijinja-cli {{.TALOS_DIR}}/machineconfig.yaml.j2 | op inject \
+        | talosctl --nodes {{.NODE}} apply-config \
+          --mode {{.MODE}} \
+          --config-patch @{{.TALOS_DIR}}/{{.MACHINE_TYPE}}/{{.NODE}}.yaml \
+          --file /dev/stdin {{if .INSECURE}}--insecure{{end}}\
+          --talosconfig {{.TALOS_DIR}}/talosconfig
     vars:
       MODE: '{{.MODE | default "auto"}}'
+      INSECURE:
+        sh: talosctl --talosconfig {{.TALOS_DIR}}/talosconfig --nodes {{.NODE}} get machineconfig &> /dev/null || echo true
+      MACHINE_TYPE:
+        sh: |-
+          talosctl --talosconfig {{.TALOS_DIR}}/talosconfig --nodes {{.NODE}} get machinetypes --output=jsonpath='{.spec}' 2> /dev/null \
+            || basename $(find '{{.TALOS_DIR}}' -name '{{.NODE}}.yaml' -printf '%h')
+    env:
+      MACHINE_TYPE: '{{.MACHINE_TYPE}}'
+      TALOS_SCHEMATIC:
+        sh: |-
+          curl --silent -X POST --data-binary @{{.TALOS_DIR}}/schematic.yaml https://factory.talos.dev/schematics \
+            | jq --raw-output '.id'
     requires:
-      vars: [CLUSTER, HOSTNAME]
+      vars: [CLUSTER, NODE]
     preconditions:
-      - talosctl --nodes {{.HOSTNAME}} get machineconfig --talosconfig {{.TALOS_DIR}}/clusterconfig/talosconfig
-      - test -f {{.TALOS_DIR}}/talconfig.yaml
-      - test -f {{.TALOS_DIR}}/clusterconfig/talosconfig
+      - op whoami --format=json
+      - talosctl --talosconfig {{.TALOS_DIR}}/talosconfig config info
+      - test -f {{.TALOS_DIR}}/machineconfig.yaml.j2
+      - test -f {{.TALOS_DIR}}/{{.MACHINE_TYPE}}/{{.NODE}}.yaml
+      - test -f {{.TALOS_DIR}}/schematic.yaml
+      - which curl jq minijinja-cli op talosctl
 
   apply-cluster: ## This isn't working on utility cluster
     desc: Apply the Talos config on all nodes for an existing cluster [CLUSTER=main]
     vars:
-      HOSTNAMES:
+      NODES:
         sh: kubectl get nodes --output=jsonpath='{.items[*].metadata.name}' --context {{.CLUSTER}}
     cmds:
-      - for: { var: HOSTNAMES }
+      - for: { var: NODES }
         task:  apply-node
         vars:
-          HOSTNAME: '{{.ITEM}}'
+          NODE: '{{.ITEM}}'
           CLUSTER: "{{.CLUSTER}}"
     requires:
       vars: [CLUSTER]
     preconditions:
-      - talosctl config info --talosconfig {{.TALOS_DIR}}/clusterconfig/talosconfig
+      - talosctl config info --talosconfig {{.TALOS_DIR}}/talosconfig
       - test -f {{.TALOS_DIR}}/talconfig.yaml
-      - test -f {{.TALOS_DIR}}/clusterconfig/talosconfig
+      - test -f {{.TALOS_DIR}}/talosconfig
 
-  soft-nuke:
-    desc: Resets nodes back to maintenance mode so you can re-deploy again straight after
-    prompt: This will destroy your cluster and reset the nodes back to maintenance mode... continue?
-    dir: '{{.TALOS_DIR}}'
-    cmd: talhelper gencommand reset --out-dir clusterconfig --config-file talconfig.yaml --extra-flags "--reboot --system-labels-to-wipe STATE --system-labels-to-wipe EPHEMERAL --graceful=false --wait=false" | bash
+  upgrade-node:
+    desc: Upgrade Talos on a single node [CLUSTER=main] [NODE=required]
+    cmd: talosctl --nodes {{.NODE}} upgrade --image={{.TALOS_IMAGE}} --timeout=10m
+    vars:
+      MACHINE_TYPE:
+        sh: talosctl --talosconfig {{.TALOS_DIR}}/talosconfig --nodes {{.NODE}} get machinetypes --output=jsonpath='{.spec}'
+      TALOS_IMAGE:
+        sh: |-
+          talosctl --talosconfig {{.TALOS_DIR}}/talosconfig --nodes {{.NODE}} get machineconfig persistent --output=jsonpath='{.spec}' \
+            | yq '.machine.install.image'
+    requires:
+      vars: [CLUSTER, NODE]
     preconditions:
-      - { msg: "Argument (CLUSTER) is required", sh: "test -n {{.CLUSTER}}" }
+      - talosctl --talosconfig {{.TALOS_DIR}}/talosconfig config info
+      - talosctl --talosconfig {{.TALOS_DIR}}/talosconfig --nodes {{.NODE}} get machineconfig
+      - which minijinja-cli talosctl yq
 
-  hard-nuke:
-    desc: Resets nodes back completely and reboots them
-    prompt: This will destroy your cluster and reset the nodes... continue?
-    dir: '{{.TALOS_DIR}}'
-    cmd: talhelper gencommand reset --out-dir clusterconfig --config-file talconfig.yaml --extra-flags "--reboot --graceful=false --wait=false" | bash
+  upgrade-k8s:
+    desc: Upgrade Kubernetes across the whole cluster [CLUSTER=main]
+    cmd: talosctl --nodes {{.RANDOM_CONTROLLER}} upgrade-k8s --to $KUBERNETES_VERSION
+    vars:
+      RANDOM_CONTROLLER:
+        sh: talosctl --talosconfig {{.TALOS_DIR}}/talosconfig config info --output json | jq --raw-output '.endpoints[]' | shuf -n 1
+    requires:
+      vars: [CLUSTER]
     preconditions:
-      - { msg: "Argument (CLUSTER) is required", sh: "test -n {{.CLUSTER}}" }
+      - talosctl config info
+      - talosctl --nodes {{.RANDOM_CONTROLLER}} get machineconfig
+      - which jq talosctl
+
+  reset-node:
+    desc: Reset Talos on a single node [CLUSTER=main] [NODE=required]
+    prompt: Reset Talos node '{{.NODE}}' ... continue?
+    cmd: talosctl --talosconfig {{.TALOS_DIR}}/talosconfig --nodes {{.NODE}} reset --graceful=false
+    requires:
+      vars: [CLUSTER,NODE]
+    preconditions:
+      - talosctl config info
+      - talosctl --nodes {{.NODE}} get machineconfig
+      - which talosctl
+
+  reset-cluster:
+    desc: Reset Talos across the whole cluster [CLUSTER=main]
+    prompt: Reset the Talos cluster ... continue?
+    cmd: talosctl --talosconfig {{.TALOS_DIR}}/talosconfig --nodes {{.NODES}} reset --graceful=false
+    vars:
+      NODES:
+        sh: talosctl --talosconfig {{.TALOS_DIR}}/talosconfig config info --output json | jq --join-output '[.nodes[]] | join(",")'
+    requires:
+      vars: [CLUSTER]
+    preconditions:
+      - talosctl config info
+      - talosctl --nodes {{.NODES}} get machineconfig
+      - which jq talosctl
 
   reboot-node:
     desc: Reboot Talos on a single node [CLUSTER=main] [HOSTNAME=required]
     cmds:
-      # - task: down
-      - talosctl --nodes {{.HOSTNAME}} reboot --talosconfig {{.TALOS_DIR}}/clusterconfig/talosconfig
-      - talosctl --nodes {{.HOSTNAME}} health --talosconfig {{.TALOS_DIR}}/clusterconfig/talosconfig
-      # - task: up
+      - task: down
+      - talosctl --nodes {{.HOSTNAME}} reboot --talosconfig {{.TALOS_DIR}}/talosconfig
+      - talosctl --nodes {{.HOSTNAME}} health --talosconfig {{.TALOS_DIR}}/talosconfig
+      - task: up
     requires:
       vars: [CLUSTER, HOSTNAME]
     preconditions:
-      - talosctl --nodes {{.HOSTNAME}} get machineconfig --talosconfig {{.TALOS_DIR}}/clusterconfig/talosconfig
-      - talosctl config info --talosconfig {{.TALOS_DIR}}/clusterconfig/talosconfig
+      - talosctl --nodes {{.HOSTNAME}} get machineconfig --talosconfig {{.TALOS_DIR}}/talosconfig
+      - talosctl config info --talosconfig {{.TALOS_DIR}}/talosconfig
       - test -f {{.TALOS_DIR}}/talconfig.yaml
       - which talosctl
 
@@ -97,9 +151,9 @@ tasks:
         vars:
           CLUSTER: "{{.CLUSTER}}"
     preconditions:
-      - talosctl config info --talosconfig {{.TALOS_DIR}}/clusterconfig/talosconfig
+      - talosctl config info --talosconfig {{.TALOS_DIR}}/talosconfig
       - test -f {{.TALOS_DIR}}/talconfig.yaml
-      - test -f {{.TALOS_DIR}}/clusterconfig/talosconfig
+      - test -f {{.TALOS_DIR}}/talosconfig
 
   shutdown-cluster:
     desc: Shutdown Talos across the whole cluster [CLUSTER=main]
@@ -111,10 +165,10 @@ tasks:
     requires:
       vars: [CLUSTER]
     preconditions:
-      - talosctl --nodes {{.NODES}} get machineconfig --talosconfig {{.TALOS_DIR}}/clusterconfig/talosconfig
-      - talosctl config info --talosconfig {{.TALOS_DIR}}/clusterconfig/talosconfig
+      - talosctl --nodes {{.NODES}} get machineconfig --talosconfig {{.TALOS_DIR}}/talosconfig
+      - talosctl config info --talosconfig {{.TALOS_DIR}}/talosconfig
       - test -f {{.TALOS_DIR}}/talconfig.yaml
-      - test -f {{.TALOS_DIR}}/clusterconfig/talosconfig
+      - test -f {{.TALOS_DIR}}/talosconfig
       - which talosctl
 
   kubeconfig:
@@ -122,12 +176,12 @@ tasks:
     cmd: talosctl kubeconfig --nodes {{.TALOS_CONTROLLER}} --force --force-context-name {{.CLUSTER}} {{.CLUSTER_DIR}}
     vars:
       TALOS_CONTROLLER:
-        sh: talosctl --talosconfig {{.TALOS_DIR}}/clusterconfig/talosconfig config info --output json --talosconfig {{.TALOS_DIR}}/clusterconfig/talosconfig | jq --raw-output '.endpoints[]' | shuf -n 1
+        sh: talosctl --talosconfig {{.TALOS_DIR}}/talosconfig config info --output json --talosconfig {{.TALOS_DIR}}/talosconfig | jq --raw-output '.endpoints[]' | shuf -n 1
     requires:
       vars: [CLUSTER]
     preconditions:
-      - talosctl config info --talosconfig {{.TALOS_DIR}}/clusterconfig/talosconfig
-      - test -f {{.TALOS_DIR}}/clusterconfig/talosconfig
+      - talosctl config info --talosconfig {{.TALOS_DIR}}/talosconfig
+      - test -f {{.TALOS_DIR}}/talosconfig
       - which talosctl
 
   down:
