--- a/kubernetes/apps/utility/kube-system/cilium/config/networks.yaml
+++ b/kubernetes/apps/utility/kube-system/cilium/config/networks.yaml
@@ -14,7 +14,7 @@ spec:
 apiVersion: cilium.io/v2alpha1
 kind: CiliumL2AnnouncementPolicy
 metadata:
-  name: policy
+  name: l2-policy
 spec:
   loadBalancerIPs: true
   interfaces: ["^enp.*"]
