--- a/kubernetes/apps/base/observability/silence-operator/app/helmrelease.yaml
+++ b/kubernetes/apps/base/observability/silence-operator/app/helmrelease.yaml
@@ -74,6 +74,16 @@ spec:
       - apiVersion: monitoring.giantswarm.io/v1alpha1
         kind: Silence
         metadata:
+          name: ceph-node-network-packet-errors
+          namespace: observability
+        spec:
+          matchers:
+            - name: alertname
+              value: CephNodeNetworkPacketErrors
+              isRegex: false
+      - apiVersion: monitoring.giantswarm.io/v1alpha1
+        kind: Silence
+        metadata:
           name: ceph-inconsistent-mtu-diskspace-warning
           namespace: observability
         spec:
