feat: update LB ips

--- a/kubernetes/apps/utility/kube-system/cilium/config/networks.yaml
+++ b/kubernetes/apps/utility/kube-system/cilium/config/networks.yaml
@@ -7,8 +7,8 @@ metadata:
 spec:
   allowFirstLastIPs: "No"
   blocks:
-    - cidr: 10.69.1.0/24
-    - cidr: ::ffff:10.69.1.0/120 # IPv4-mapped IPv6
+    - cidr: 10.69.10.0/24
+    - cidr: ::ffff:10.69.10.0/120 # IPv4-mapped IPv6
 ---
 # yaml-language-server: $schema=https://kube-schemas.pages.dev/cilium.io/ciliuml2announcementpolicy_v2alpha1.json
 apiVersion: cilium.io/v2alpha1
@@ -75,7 +75,7 @@ kind: Service
 metadata:
   name: kube-api
   annotations:
-    io.cilium/lb-ipam-ips: 10.69.1.120
+    io.cilium/lb-ipam-ips: 10.69.10.102, ::ffff:10.69.10.102
 spec:
   type: LoadBalancer
   externalTrafficPolicy: Cluster
