--- a/kubernetes/apps/test/kube-system/cilium/config/networks.yaml
+++ b/kubernetes/apps/test/kube-system/cilium/config/networks.yaml
@@ -7,16 +7,35 @@ metadata:
 spec:
   allowFirstLastIPs: "No"
   blocks:
-    - cidr: "10.69.2.0/24"
+    - cidr: 10.69.10.0/24
+    - cidr: ::ffff:10.69.10.0/120 # IPv4-mapped IPv6
 ---
 # yaml-language-server: $schema=https://kube-schemas.pages.dev/cilium.io/ciliuml2announcementpolicy_v2alpha1.json
 apiVersion: cilium.io/v2alpha1
 kind: CiliumL2AnnouncementPolicy
 metadata:
-  name: policy
+  name: l2-policy
 spec:
   loadBalancerIPs: true
   interfaces: ["^enp.*"]
   nodeSelector:
     matchLabels:
       kubernetes.io/os: linux
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: kube-api
+  annotations:
+    io.cilium/lb-ipam-ips: 10.69.10.202, ::ffff:10.69.10.202
+spec:
+  type: LoadBalancer
+  externalTrafficPolicy: Cluster
+  selector:
+    k8s-app: kube-apiserver
+    tier: control-plane
+  ports:
+    - name: https
+      port: 6443
+      protocol: TCP
+      targetPort: 6443
