--- a/kubernetes/apps/base/observability/network-ups-tools/helmrelease.yaml
+++ b/kubernetes/apps/base/observability/network-ups-tools/helmrelease.yaml
@@ -43,6 +43,7 @@ spec:
         type: LoadBalancer
         annotations:
           external-dns.alpha.kubernetes.io/hostname: ${HOSTNAME}.jory.dev
+          lbipam.cilium.io/ips: ${NUT_SERVICE_IP}, ::ffff:${NUT_SERVICE_IP}
         externalTrafficPolicy: Cluster
         ports:
           http:
