--- a/kubernetes/apps/main/observability/network-ups-tools/ks.yaml
+++ b/kubernetes/apps/main/observability/network-ups-tools/ks.yaml
@@ -14,6 +14,7 @@ spec:
     substitute:
       APP: *app
       HOSTNAME: server-nut
+      NUT_SERVICE_IP: 10.69.10.38
   prune: true
   retryInterval: 2m
   sourceRef:
