--- a/kubernetes/apps/utility/observability/network-ups-tools/ks.yaml
+++ b/kubernetes/apps/utility/observability/network-ups-tools/ks.yaml
@@ -14,6 +14,7 @@ spec:
     substitute:
       APP: *app
       HOSTNAME: network-nut
+      NUT_SERVICE_IP: 10.69.10.138
   prune: true
   retryInterval: 2m
   sourceRef:
