feat: update rook-ceph config

--- a/talos/main/controlplane/ayaka.yaml
+++ b/talos/main/controlplane/ayaka.yaml
@@ -1,8 +1,11 @@
 ---
 machine:
+  disks:
+    - device: /dev/disk/by-id/nvme-WD_BLACK SN770 1TB_230314800604
+      partitions: [{ mountpoint: /var/openebs/local }]
   install:
     diskSelector:
-      serial: "24400G801149"
+      serial: "S665NE0R500552" # m.2 PM9A3 960GB
   network:
     hostname: ayaka
     interfaces:
