--- a/talos/main/controlplane/eula.yaml
+++ b/talos/main/controlplane/eula.yaml
@@ -1,8 +1,11 @@
 ---
 machine:
+  disks:
+    - device: /dev/disk/by-id/nvme-WD_BLACK SN770 1TB_22501H800457
+      partitions: [{ mountpoint: /var/openebs/local }]
   install:
     diskSelector:
-      serial: "22501H800457"
+      serial: "S665NE0R500722" # m.2 PM9A3 960GB
   network:
     hostname: eula
     interfaces:
