--- a/talos/main/controlplane/ganyu.yaml
+++ b/talos/main/controlplane/ganyu.yaml
@@ -1,8 +1,11 @@
 ---
 machine:
+  disks:
+    - device: /dev/disk/by-id/nvme-WD_BLACK_SN770_1TB_23026Y802292
+      partitions: [{ mountpoint: /var/openebs/local }]
   install:
     diskSelector:
-      serial: "230314800616"
+      serial: "S665NE0R500520" # m.2 PM9A3 960GB
   network:
     hostname: ganyu
     interfaces:
