--- a/talos/main/controlplane/eula.yaml
+++ b/talos/main/controlplane/eula.yaml
@@ -1,7 +1,7 @@
 ---
 machine:
   disks:
-    - device: /dev/disk/by-id/nvme-WD_BLACK SN770 1TB_22501H800457
+    - device: /dev/disk/by-id/nvme-WD_BLACK_SN770_1TB_22501H800457
       partitions: [{ mountpoint: /var/openebs/local }]
   install:
     diskSelector:
