--- a/talos/main/controlplane/ayaka.yaml
+++ b/talos/main/controlplane/ayaka.yaml
@@ -1,7 +1,7 @@
 ---
 machine:
   disks:
-    - device: /dev/disk/by-id/nvme-WD_BLACK SN770 1TB_230314800604
+    - device: /dev/disk/by-id/nvme-WD_BLACK_SN770_1TB_230314800604
       partitions: [{ mountpoint: /var/openebs/local }]
   install:
     diskSelector:
