fix: osd on ayaka

--- a/kubernetes/apps/base/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/base/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -80,7 +80,7 @@ spec:
         nodes:
           - name: ayaka
             devices:
-              - name: /dev/disk/by-id/nvme-SAMSUNG MZQL21T9HCJR-00B7C_S63SNE0R504741
+              - name: /dev/disk/by-id/nvme-SAMSUNG_MZQL21T9HCJR-00B7C_S63SNE0R504741
           - name: eula
             devices:
               - name: /dev/disk/by-id/nvme-WD_BLACK_SN770_1TB_23063G803424
