fix: topology spread on postgres cluster

--- a/kubernetes/components/postgres/cluster.yaml
+++ b/kubernetes/components/postgres/cluster.yaml
@@ -41,7 +41,7 @@ spec:
           whenUnsatisfiable: "DoNotSchedule"
           labelSelector:
             matchLabels:
-              postgres-operator.crunchydata.com/cluster: ${APP}-postgres
+              postgres-operator.crunchydata.com/cluster: *name
   users:
     # Superuser
     - name: "postgres"
