--- a/talos/main/controlplane/eula.yaml
+++ b/talos/main/controlplane/eula.yaml
@@ -14,6 +14,14 @@ machine:
           hardwareAddr: 58:47:ca:7d:3d:ad
         dhcp: true
         mtu: 9000
+      - # 2.5G ignore for WoL/vPro
+        deviceSelector:
+          hardwareAddr: 58:47:ca:7d:3d:af
+        ignore: true
+      - # 2.5G ignore for WoL/vPro
+        deviceSelector:
+          hardwareAddr: 58:47:ca:7d:3d:b0
+        ignore: true
       - # ayaka
         deviceSelector: { busPath: 0-1.0 }
         dhcp: false
