--- a/talos/main/controlplane/ganyu.yaml
+++ b/talos/main/controlplane/ganyu.yaml
@@ -14,6 +14,14 @@ machine:
           hardwareAddr: 58:47:ca:7d:41:45
         dhcp: true
         mtu: 9000
+      - # 2.5G ignore for WoL/vPro
+        deviceSelector:
+          hardwareAddr: 58:47:ca:7d:41:47
+        ignore: true
+      - # 2.5G ignore for WoL/vPro
+        deviceSelector:
+          hardwareAddr: 58:47:ca:7d:41:48
+        ignore: true
       - # ayaka
         deviceSelector: { busPath: 0-1.0 }
         dhcp: false
