--- a/talos/main/controlplane/ayaka.yaml
+++ b/talos/main/controlplane/ayaka.yaml
@@ -14,6 +14,14 @@ machine:
           hardwareAddr: 58:47:ca:7d:3c:85
         dhcp: true
         mtu: 9000
+      - # 2.5G ignore for WoL/vPro
+        deviceSelector:
+          hardwareAddr: 58:47:ca:7d:3c:87
+        ignore: true
+      - # 2.5G ignore for WoL/vPro
+        deviceSelector:
+          hardwareAddr: 58:47:ca:7d:3c:88
+        ignore: true
       - # eula
         deviceSelector: { busPath: 0-1.0 }
         dhcp: false
