feat: deploy suc! :rocket:

--- a/kubernetes/apps/utility/kube-tools/kustomization.yaml
+++ b/kubernetes/apps/utility/kube-tools/kustomization.yaml
@@ -10,7 +10,7 @@ resources:
   - ./fstrim/ks.yaml
   - ./node-feature-discovery/ks.yaml
   - ./reloader/ks.yaml
-  # - ./system-upgrade-controller/ks.yaml
+  - ./system-upgrade-controller/ks.yaml
 configMapGenerator:
   - name: versions
     env: ../../base/kube-tools/system-upgrade-controller/versions.env
