feat: hardcode node for UPS to ditch NFD

--- a/kubernetes/apps/base/self-hosted/acars/helmrelease.yaml
+++ b/kubernetes/apps/base/self-hosted/acars/helmrelease.yaml
@@ -366,7 +366,7 @@ spec:
                 memory: 512Mi
     defaultPodOptions:
       nodeSelector:
-        rtl.feature.node.kubernetes.io/rtlsdr: "true"
+        kubernetes.io/hostname: celestia
     service:
       acars-router:
         controller: acars-router
