--- a/kubernetes/apps/main/observability/network-ups-tools/ks.yaml
+++ b/kubernetes/apps/main/observability/network-ups-tools/ks.yaml
@@ -39,4 +39,4 @@ spec:
             network-ups-tools:
               pod:
                 nodeSelector:
-                  ups.feature.node.kubernetes.io/tripplite: "true"
+                  kubernetes.io/hostname: ayaka
