--- a/kubernetes/apps/utility/observability/network-ups-tools/ks.yaml
+++ b/kubernetes/apps/utility/observability/network-ups-tools/ks.yaml
@@ -39,4 +39,4 @@ spec:
             network-ups-tools:
               pod:
                 nodeSelector:
-                  ups.feature.node.kubernetes.io/apc: "true"
+                  kubernetes.io/hostname: celestia
