--- a/kubernetes/apps/main/kube-tools/kustomization.yaml
+++ b/kubernetes/apps/main/kube-tools/kustomization.yaml
@@ -9,7 +9,7 @@ resources:
   - ./descheduler/ks.yaml
   - ./fstrim/ks.yaml
   - ./intel-device-plugins/ks.yaml
-  - ./node-feature-discovery/ks.yaml
+  # - ./node-feature-discovery/ks.yaml
   - ./reloader/ks.yaml
   - ./spegel/ks.yaml
   - ./system-upgrade-controller/ks.yaml
