fix: remove NFD from repo

--- a/kubernetes/apps/base/home-automation/rtlamr2mqtt/helmrelease.yaml
+++ b/kubernetes/apps/base/home-automation/rtlamr2mqtt/helmrelease.yaml
@@ -38,7 +38,7 @@ spec:
                 memory: 256Mi
     defaultPodOptions:
       nodeSelector:
-        rtl.feature.node.kubernetes.io/rtlsdr: "true"
+        kubernetes.io/hostname: celestia
     persistence:
       config-file:
         type: secret
