feat: update rook-ceph-cluster

--- a/kubernetes/apps/base/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/base/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -73,20 +73,9 @@ spec:
         connections:
           requireMsgr2: true
       storage:
-        useAllNodes: false
+        useAllNodes: true
         useAllDevices: false
-        config:
-          osdsPerDevice: "1"
-        nodes:
-          - name: ayaka
-            devices:
-              - name: /dev/disk/by-id/nvme-SAMSUNG_MZQL21T9HCJR-00B7C_S63SNE0R504741
-          - name: eula
-            devices:
-              - name: /dev/disk/by-id/nvme-SAMSUNG_MZQL21T9HCJR-00A07_S64GNE0R300684
-          - name: ganyu
-            devices:
-              - name: /dev/disk/by-id/nvme-SAMSUNG_MZQL21T9HCJR-00BAL_S68LNE0T309523
+        devicePathFilter: /dev/disk/by-id/nvme-SAMSUNG_MZQL21T9HCJR-.*
       placement:
         mgr: &placement
           nodeAffinity:
