--- a/.github/workflows/image-pull.yaml
+++ b/.github/workflows/image-pull.yaml
@@ -10,6 +10,9 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.event.number || github.ref }}
   cancel-in-progress: true
 
+permissions:
+  contents: read
+
 jobs:
   filter:
     name: Image Pull - Filter
@@ -40,6 +43,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
+          persist-credentials: false
           ref: ${{ matrix.branch == 'default' && github.event.repository.default_branch || '' }}
 
       - name: Gather Images
@@ -98,12 +102,14 @@ jobs:
         image: ${{ fromJSON(needs.diff.outputs.images) }}
       max-parallel: 4
       fail-fast: false
+    env:
+      MATRIX_IMAGE: ${{ matrix.image }}
     steps:
       - name: Install talosctl
         run: curl -fsSL https://talos.dev/install | sh
 
       - name: Pull Image
-        run: talosctl --nodes $NODE image pull ${{ matrix.image }}
+        run: talosctl --nodes $NODE image pull "${MATRIX_IMAGE}"
 
   success:
     if: ${{ !cancelled() }}
