--- a/.github/workflows/labeler.yaml
+++ b/.github/workflows/labeler.yaml
@@ -4,13 +4,17 @@ name: Labeler
 
 on:
   workflow_dispatch:
-  pull_request_target:
+  pull_request:
     branches: ["main"]
+
+permissions:
+  contents: read
 
 jobs:
   main:
     name: Labeler - Labeler
     runs-on: ubuntu-latest
+    if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
     permissions:
       contents: read
       pull-requests: write
