--- a/.github/workflows/schemas.yaml
+++ b/.github/workflows/schemas.yaml
@@ -13,10 +13,13 @@ on:
 env:
   UV_SYSTEM_PYTHON: "1"
 
+permissions:
+  contents: read
+
 jobs:
   main:
     name: Schemas
-    runs-on: [home-ops-runner-main]
+    runs-on: home-ops-runner-main
     permissions:
       contents: read
       packages: write
@@ -35,17 +38,10 @@ jobs:
           CLOUDFLARE_API_TOKEN: op://Kubernetes/cloudflare/CLOUDFLARE_API_TOKEN_GHA
           CLOUDFLARE_ACCOUNT_ID: op://Kubernetes/cloudflare/CLOUDFLARE_ACCOUNT_TAG
 
-      - name: Generate Token
-        uses: actions/create-github-app-token@df432ceedc7162793a195dd1713ff69aefc7379e # v2.0.6
-        id: app-token
-        with:
-          app-id: ${{ secrets.BOT_APP_ID }}
-          private-key: ${{ secrets.BOT_APP_PRIVATE_KEY }}
-
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
-          token: ${{ steps.app-token.outputs.token }}
+          persist-credentials: false
 
       - name: Install kubectl
         uses: azure/setup-kubectl@3e0aec4d80787158d308d7b364cb1b702e7feb7f # v4.0.0
