--- a/.github/workflows/terraform-publish.yaml
+++ b/.github/workflows/terraform-publish.yaml
@@ -8,6 +8,9 @@ on:
     branches: ["main"]
     paths: ["terraform/**"]
 
+permissions:
+  contents: read
+
 jobs:
   publish-terraform:
     name: Publish Terraform
@@ -18,6 +21,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          persist-credentials: false
 
       - name: Setup Homebrew
         uses: Homebrew/actions/setup-homebrew@master
@@ -32,14 +37,10 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Lowercase repository owner
-        run: |
-          echo "LOWERCASE_REPO_OWNER=${GITHUB_REPOSITORY_OWNER,,}" >> "${GITHUB_ENV}"
-
       - name: Generate Tag
         id: generate-tag
         run: |
-          echo "tag=ghcr.io/${LOWERCASE_REPO_OWNER}/manifests/terraform:$(git rev-parse --short HEAD)" >> "${GITHUB_OUTPUT}"
+          echo "tag=ghcr.io/${{ github.repository_owner }}/manifests/terraform:$(git rev-parse --short HEAD)" >> "${GITHUB_OUTPUT}"
 
       - name: Publish OCI Artifact
         run: |
