fix: bad copypaste

--- a/kubernetes/apps/base/storage/volsync/mutatingadmissionpolicy.yaml
+++ b/kubernetes/apps/base/storage/volsync/mutatingadmissionpolicy.yaml
@@ -98,8 +98,8 @@ spec:
               value: Object.spec.template.spec.volumes{
                 name: "repository",
                 nfs: Object.spec.template.spec.volumes.nfs{
-                  server: "expanse.internal",
-                  path: "/mnt/eros/Volsync"
+                  server: "voyager.internal",
+                  path: "/mnt/user/kubernetes/volsync"
                 }
               }
             }
