--- a/docs/src/assets/utility-nut/upsmon.conf
+++ b/docs/src/assets/utility-nut/upsmon.conf
@@ -1,5 +1,5 @@
 MONITOR ups@localhost:3493 1 upsmon "bacon" master
-SHUTDOWNCMD "/sbin/shutdown -h +0"
+SHUTDOWNCMD "talosctl shutdown --context utility"
 POWERDOWNFLAG /etc/killpower
 POLLFREQ 15
 POLLFREQALERT 5
