fix: update url

--- a/kubernetes/apps/main/observability/gatus/config.yaml
+++ b/kubernetes/apps/main/observability/gatus/config.yaml
@@ -30,13 +30,18 @@ endpoints:
     client:
       dns-resolver: tcp://1.1.1.1:53
     conditions: ["[STATUS] == 404"]
+  - name: cert-expiration
+    group: domain
+    url: "https://status.jory.dev"
+    interval: 1h
+    conditions:
+      - "[CERTIFICATE_EXPIRATION] > 240h"
   - name: domain-expiration
     group: domain
     url: "https://jory.dev"
     interval: 1h
     conditions:
       - "[DOMAIN_EXPIRATION] > 720h"
-      - "[CERTIFICATE_EXPIRATION] > 240h"
 remote:
   instances:
     - endpoint-prefix: ""
