feat: update config to scrape rpi5

--- a/kubernetes/apps/main/observability/kube-prometheus-stack/scrapeconfig.yaml
+++ b/kubernetes/apps/main/observability/kube-prometheus-stack/scrapeconfig.yaml
@@ -9,6 +9,8 @@ spec:
     - targets:
         - voyager.internal:9100
         - pikvm.internal:9100
+        - venti.internal:9100
+        - sayu.internal:9100
   metricsPath: /metrics
   relabelings:
     - action: replace
@@ -24,6 +26,8 @@ spec:
   staticConfigs:
     - targets:
         - voyager.internal:9633
+        - venti.internal:9633
+        - sayu.internal:9633
   metricsPath: /metrics
   relabelings:
     - action: replace
