--- a/kubernetes/apps/base/observability/exporters/blackbox-exporter/helmrelease.yaml
+++ b/kubernetes/apps/base/observability/exporters/blackbox-exporter/helmrelease.yaml
@@ -72,6 +72,9 @@ spec:
         interval: 1m
       targets:
         - { name: &name voyager.internal, module: icmp, url: *name }
+        - { name: &name venti.internal, module: icmp, url: *name }
+        - { name: &name sayu.internal, module: icmp, url: *name }
         - { name: &name pikvm.internal, module: icmp, url: *name }
+        - { name: &name jetkvm.internal, module: icmp, url: *name }
         - { name: &name celestia.internal, module: icmp, url: *name }
         - { name: tessmart, module: icmp, url: "192.168.1.10" }
