--- a/kubernetes/apps/base/kube-tools/system-upgrade-controller/app/helmrelease.yaml
+++ b/kubernetes/apps/base/kube-tools/system-upgrade-controller/app/helmrelease.yaml
@@ -43,11 +43,13 @@ spec:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
               capabilities: { drop: ["ALL"] }
+        serviceAccount:
+          identifier: *app
     defaultPodOptions:
       securityContext:
         runAsNonRoot: true
         runAsUser: 1000
         runAsGroup: 100
     serviceAccount:
-      name: *app
-      create: true
+      system-upgrade-controller:
+        enabled: true
