feat: update SA, as creation is impled

--- a/kubernetes/apps/base/database/dragonfly/helmrelease.yaml
+++ b/kubernetes/apps/base/database/dragonfly/helmrelease.yaml
@@ -85,8 +85,7 @@ spec:
           metrics:
             port: 8080
     serviceAccount:
-      dragonfly-operator:
-        enabled: true
+      dragonfly-operator: {}
     serviceMonitor:
       app:
         serviceName: *app
