--- a/kubernetes/apps/base/kube-tools/system-upgrade-controller/app/helmrelease.yaml
+++ b/kubernetes/apps/base/kube-tools/system-upgrade-controller/app/helmrelease.yaml
@@ -51,5 +51,4 @@ spec:
         runAsUser: 1000
         runAsGroup: 100
     serviceAccount:
-      system-upgrade-controller:
-        enabled: true
+      system-upgrade-controller: {}
