--- a/kubernetes/apps/base/observability/gatus/helmrelease.yaml
+++ b/kubernetes/apps/base/observability/gatus/helmrelease.yaml
@@ -101,8 +101,7 @@ spec:
               - name: *app
                 port: *port
     serviceAccount:
-      gatus:
-        enabled: true
+      gatus: {}
     persistence:
       config:
         type: emptyDir
