--- a/kubernetes/apps/base/downloads/dashbrr/helmrelease.yaml
+++ b/kubernetes/apps/base/downloads/dashbrr/helmrelease.yaml
@@ -91,8 +91,7 @@ spec:
               - name: *app
                 port: *port
     serviceAccount:
-      dashbrr:
-        enabled: true
+      dashbrr: {}
     persistence:
       cache:
         type: emptyDir
