--- a/kubernetes/apps/base/database/dragonfly/helmrelease.yaml
+++ b/kubernetes/apps/base/database/dragonfly/helmrelease.yaml
@@ -85,7 +85,8 @@ spec:
           metrics:
             port: 8080
     serviceAccount:
-      dragonfly-operator: {}
+      dragonfly-operator:
+        enabled: true
     serviceMonitor:
       app:
         serviceName: *app
